# firebase-cpp-sdk

./: .clang-format  .clangd  .gitallowed  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Jules.md  LICENSE  README.md  STYLE_GUIDE.md  android_screerecord.py  binary_to_array.py  binary_to_array_test.py  build.gradle  build_type_header.py  build_type_header_test.py  cpp_sdk_version.json  generate_xml_from_google_services_json.py  gms_package_versions_integrate.sh  gradle.properties  merge_libraries_test_file.cc  pull_request_template.md  readme_for_generate_xml_from_google_services_json_exe.txt  settings.gradle  setup_integration_tests.py  setup_integration_tests.sh  test_android.sh  test_linux.sh  test_mac_ios.sh  test_mac_ios_simulator.sh  test_mac_x64.sh  test_macos.sh  test_windows.bat  test_windows_x32.bat  test_windows_x64.bat  version.sh  version_header.py  version_header_test.py
admob/: CMakeLists.txt  admob_additional.pro  build.gradle
admob/admob_resources/: AndroidManifest.xml  build.gradle
admob/integration_test/: AndroidManifest.xml  CMakeLists.txt  Info.plist  LibraryManifest.xml  Podfile  build.gradle
analytics/: CMakeLists.txt  NOTICES  build.gradle  generate_constants.py  generate_constants_lib.py  generate_constants_test.py  generate_windows_stubs.py
analytics/integration_test/: AndroidManifest.xml  CMakeLists.txt  Info.plist  LibraryManifest.xml  Podfile  build.gradle  googletest.cmake  readme.md  settings.gradle
analytics/ios_headers/: FIREventNames.h  FIRParameterNames.h  FIRUserPropertyNames.h
analytics/src/: analytics_android.cc  analytics_common.cc  analytics_common.h  analytics_desktop.cc  analytics_desktop_dynamic.c  analytics_desktop_dynamic.h  analytics_internal.h  analytics_ios.mm  analytics_stub.cc  analytics_windows.cc  analytics_windows.h
analytics/tests/: CMakeLists.txt  analytics_test.cc
analytics/windows/: known_dll_hashes.txt  known_hashes.txt
app/: CMakeLists.txt  app_additional.pro  build.gradle  google_services.fbs
app/app_resources/: build.gradle
app/google_api_resources/: build.gradle
app/instance_id/: CMakeLists.txt  iid_data.fbs  instance_id_desktop_impl.cc  instance_id_desktop_impl.h  instance_id_desktop_impl_test.cc
app/integration_test/: AndroidManifest.xml  CMakeLists.txt  Info.plist  LibraryManifest.xml  Podfile  build.gradle  googletest.cmake  settings.gradle
app/integration_test_internal/: AndroidManifest.xml  CMakeLists.txt  CMakeLists.txt~  Podfile  gradlew  gradlew.bat
app/invites_resources/: build.gradle
app/memory/: atomic.h  atomic_test.cc  shared_ptr.h  shared_ptr_test.cc  unique_ptr.h  unique_ptr_test.cc
app/meta/: move.h  move_test.cc  type_traits.h
app/rest/: CMakeLists.txt  controller_curl.cc  controller_curl.h  controller_interface.cc  controller_interface.h  gzipheader.cc  gzipheader.h  request.cc  request.h  request_binary.h  request_binary_gzip.cc  request_binary_gzip.h  request_file.cc  request_file.h  request_json.h  request_options.h  response.cc  response.h  response_binary.cc  response_binary.h  response_json.h  transfer_interface.h  transport_builder.cc  transport_builder.h  transport_curl.cc  transport_curl.h  transport_interface.cc  transport_interface.h  transport_mock.cc  transport_mock.h  util.cc  util.h  www_form_url_encoded.cc  www_form_url_encoded.h  zlibwrapper.cc  zlibwrapper.h
app/src/: app_android.cc  app_android.h  app_common.cc  app_common.h  app_desktop.cc  app_desktop.h  app_identifier.cc  app_identifier.h  app_ios.h  app_ios.mm  app_options.cc  app_stub.cc  assert.h  base64.cc  base64.h  base64_fuzzer.cc  callback.cc  callback.h  cleanup_notifier.cc  cleanup_notifier.h  embedded_file.h  filesystem.h  filesystem_apple.mm  filesystem_desktop_linux.cc  filesystem_desktop_windows.cc  function_registry.cc  function_registry.h  future.cc  future_manager.cc  future_manager.h  heartbeat_date_storage_desktop.cc  heartbeat_date_storage_desktop.h  heartbeat_info_desktop.cc  heartbeat_info_desktop.h  iid.h  iid_android.cc  iid_ios.mm  iid_stub.cc  intrusive_list.h  jobject_reference.cc  (+47 more)
app/test_resources/: build.gradle
app/tests/: CMakeLists.txt  app_desktop_test.cc  app_test.cc  assert_test.cc  base64_openssh_test.cc  base64_test.cc  callback_test.cc  cleanup_notifier_test.cc  flexbuffer_matcher.cc  flexbuffer_matcher.h  flexbuffer_matcher_test.cc  future_manager_test.cc  future_test.cc  google_services_test.cc  heartbeat_controller_desktop_test.cc  heartbeat_info_desktop_test.cc  heartbeat_storage_desktop_test.cc  intrusive_list_test.cc  jobject_reference_test.cc  locale_test.cc  log_test.cc  logger_test.cc  optional_test.cc  path_test.cc  reference_count_test.cc  scheduler_test.cc  semaphore_test.cc  swizzle_test.mm  thread_test.cc  time_test.cc  util_android_test.cc  util_ios_test.mm  util_test.cc  uuid_test.cc  variant_test.cc  variant_util_test.cc
app_check/: CMakeLists.txt  build.gradle
app_check/app_check_resources/: build.gradle
app_check/integration_test/: AndroidManifest.xml  CMakeLists.txt  Info.plist  LibraryManifest.xml  Podfile  build.gradle  googletest.cmake  gradlew  (+2 more)
auth/: CMakeLists.txt  NOTICES  auth_additional.pro  build.gradle
database/: CMakeLists.txt  NOTICES  build.gradle
dynamic_links/: CMakeLists.txt  build.gradle
firestore/: .clang-format  AndroidManifest.xml.tmpl  AndroidTest.java.tmpl  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  Info.plist  README.md  build.gradle  generate_android_test.py  integration_test_emulator.sh  run_local_tests.sh
functions/: CMakeLists.txt  build.gradle
gma/: CMakeLists.txt  build.gradle
installations/: CMakeLists.txt  build.gradle
instance_id/: CMakeLists.txt  build.gradle
invites/: CMakeLists.txt  NOTICES  build.gradle
messaging/: AndroidManifest.xml  CMakeLists.txt  build.gradle  messaging_additional.pro
performance/: CMakeLists.txt  build.gradle  example_usage.cc
release_build_files/: CMakeLists.txt  NOTICES  readme.md
remote_config/: CMakeLists.txt  build.gradle
storage/: CMakeLists.txt  build.gradle
ump/: CMakeLists.txt  build.gradle
(+2426 files in other folders)
